--- a/composer.json
+++ b/composer.json
@@ -2,55 +2,58 @@
     "name": "diandi/hyperf-casbin",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.3",
     "keywords": [
-        "hyperf",
-        "casbin",
-        "permission",
-        "access-control",
-        "authorization",
-        "rbac",
-        "acl",
-        "abac"
+        "php",
+        "hyperf"
     ],
-    "description": "An authorization library that supports access control models like ACL, RBAC, ABAC in hyperf. ",
-    "authors": [
-        {
-            "name": "Brady",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=8.1",
-        "hyperf/database": "^3.0",
-        "hyperf/db-connection": "^3.0",
-        "hyperf/cache": "^3.0",
-        "hyperf/utils": "^3.0",
-        "hyperf/config": "^3.0",
-        "hyperf/logger": "^3.0",
-        "casbin/casbin": "~3.21.0",
-        "hyperf/command": "^3.0",
-        "casbin/psr3-bridge": "^1.3",
-        "hyperf/validation": "^3.0"
-    },
-    "require-dev": {
-        "hyperf/testing": "^3.0",
-        "mockery/mockery": "^1.4"
-    },
+    "description": "",
     "autoload": {
         "psr-4": {
-            "Diandi\\Casbin\\": "src/"
+            "Diandi\\HyperfCasbin\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "HyperfTest\\": "tests"
+        }
+    },
+    "require": {
+        "php": ">=8.0",
+        "hyperf/database": "3.*",
+        "hyperf/db-connection": "3.*",
+        "hyperf/cache": "3.*",
+        "hyperf/utils": "3.*",
+        "hyperf/config": "3.*",
+        "hyperf/logger": "3.*",
+        "casbin/casbin": "~3.6.0",
+        "hyperf/command": "3.*",
+        "casbin/psr3-bridge": "^1.3",
+        "hyperf/validation": "3.*"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "mockery/mockery": "^1.0",
+        "phpstan/phpstan": "^1.0",
+        "phpunit/phpunit": ">=7.0",
+        "swoole/ide-helper": "^4.5"
+    },
     "suggest": {
-        "hyperf/command": "required hyperf/command ~2.0.0 OR required hyperf/command ~1.1.0"
+        "swow/swow": "Required to create swow components."
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
     },
     "scripts": {
-        "test": "co-phpunit -c phpunit.xml --colors=always"
+        "test": "phpunit -c phpunit.xml --colors=always",
+        "analyse": "phpstan analyse --memory-limit 1024M -l 0 ./src",
+        "cs-fix": "php-cs-fixer fix $1"
     },
     "extra": {
         "hyperf": {
-            "config": "Diandi\\Casbin\\ConfigProvider"
+            "config": "Diandi\\HyperfCasbin\\ConfigProvider"
         }
     }
 }
